navbar margin-top error not fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,8 @@ body {
   font-family: 'Euclid Circular A', sans-serif;
                                                 
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
